# dashboards

./: .gitignore  .gitmodules  LICENSE  pyproject.toml
common/: auth.py  db_util.py  encrypt.py  source_data_util.py  st_util.py
deploy/: oauth2-proxy.cfg  start-oauth2-proxy-service
echo/: index.js  (+2 more)
streamlit/: pyproject.toml
streamlit/common/: auth.py  source_data_util.py  st_util.py
streamlit/finance/: app.py  config.prod.toml
streamlit/finance/ingest/: .env.dev  .env.prod  db.py  ingest_datamart.py
streamlit/finance/src/: route.py
streamlit/finance/src/dept/: __init__.py
streamlit/finance/src/dept/base/: configs.py  dashboard.py  data.py  ui.py
streamlit/finance/src/model/: db.py  income_statement_def.py  source_data.py
streamlit/marketing/: Pipfile
streamlit/marketing/src/model/: app_data.py
streamlit/marketing/src/ui/: dashboard.py  ui.py
streamlit/panel/: app.py
streamlit/panel/ingest/: ingest_datamart.py
streamlit/panel/src/model/: db.py  settings.py  source_data.py
streamlit/residency/: Pipfile  app.py  config.prod.toml
streamlit/residency/ingest/: .env.dev  ingest_datamart.py
streamlit/residency/src/model/: db.py
streamlit/residency/src/ui/: ui.py
streamlit/rvupeds/: app.py
streamlit/rvupeds/ingest/: .env.dev  .env.prod
streamlit/rvupeds/src/: route.py
streamlit/rvupeds/src/model/: db.py  settings.py
streamlit/rvupeds/src/ui/: dates.py  fig.py
streamlit/template/: config.prod.toml
streamlit/template/ingest/: .env.prod
streamlit/template/src/model/: db.py
streamlit/template/src/ui/: dashboard.py  ui.py
(+168 files in other folders)
