[project]
name = "prh-streamlit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "authlib>=1.6.1",
    "boto3>=1.39.9",
    "cryptography>=45.0.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pyodbc>=5.2.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.47.0",
    "streamlit-aggrid>=1.1.8.post1",
    "streamlit-extras>=0.7.6",
]
